created basic page structure. added search feature and an individual profile page for each student.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>NSSYearbook</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>Nashville Software School Yearbook</title>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+  </head>
 
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+  <header>
+    <section id="log_in">
+      <% unless current_user %>
+        <%= link_to "Log In", new_user_session_path %>
+      <% end %>
+    </section>
 
-  <%= yield %>
+    <h1>Nashville Software School Yearbook</h1>
+  </header>
 
-</body>
+  <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
+    <%= yield %>
+  </body>
 </html>
