--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
-<% unless current_user %>
-  <%= link_to "Log In", new_user_session_path %>
-<% end %>
+<%= render 'students/form' %>
+
+<%= render 'students/thumbnails' %>
