added testing for search functionality

--- a/app/views/students/_student.html.erb
+++ b/app/views/students/_student.html.erb
@@ -1,5 +1,5 @@
-<h1><%= @student.name %></h1> 
-<img><%= image_tag "#{@student.id}.jpg", :size => "500x500" %></img>
+<h1><%= @student.name %></h1>
+<%= image_tag "#{@student.id}.jpg", :size => "500x500" %>
 </br>
 <q>This is a quote from <%= @student.name %>.</q>
 <p>This is a bio for <%= @student.name %>. Blah. Blah. Blah.</p>
