added instructor table, revamped site structure

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,1 @@
-<%= render 'students/thumbnails' %>
+<div id="welcome"><p>In 2013, Nashville Software School graduated twenty-six individuals from diverse backgrounds with the help of five instructors and several mentors. The grueling six month course taught students about code, and more importantly, how to learn. This Yearbook is a commemoration of their experiences.</p></div>
