--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,1 +1,3 @@
-<%= render 'students/students' %>
+<div id="search"><%= render 'students/form' %></div>
+
+<div id="student_thumbnails"><%= render 'students/thumbnails' %></div>
