--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,21 +1,88 @@
 html {
   width: 100%;
+  height: 100%;
   background: black;
 }
 
 body {
-  width: 60%;
-  background: white;
-  margin: auto;
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-  padding: 0% 5% 0% 5%;
+  padding-top: 3%;
+  width: 100%;
+  height: 94%;
+  background: lightgray;
+  font-family: "Lucida Grande";
+}
+
+header {
+  width: 80%;
+  margin-left: 10%;
+  background-color: #dcdcdc;
+  box-shadow: 0px 0px 0px 5px #666 inset;
 }
 
 header h1 {
-  background: lightgray;
+  width: 90%;
+  text-align: center;
+  font-size: 200%;
+  padding: 2%;
+  text-decoration: none;
 }
 
-#log_in {
+#menu {
+  margin-left: 10%;
+  margin-top: 2%;
+  width: 15%;
+  float: left;
+}
+
+.button {
+  padding: 15px;
+  background-color: #dcdcdc;
+  box-shadow: 0px 0px 40px 10px #666 inset;
+  color: #551A8B;
+}
+
+#log_in_button, #student_button, #instructor_button {
+  font-size: 150%;
+  text-decoration: none;
+  width: 100%;
+}
+
+.input {
+  height: 40px;
+}
+
+#wrapper {
+  height: 65%;
+  width: 58%;
+  margin-left: 28%;
+  margin-top: 2%;
+  padding: 2%;
+  background-color: #dcdcdc;
+  box-shadow: 0px 0px 0px 5px #666 inset;
+}
+
+#welcome {
+  font-size: 130%;
+  line-height: 150%;
+}
+
+#search {
+  margin-bottom: 2%;
+  margin-left: 18%;
+}
+
+#student_photo, #instructor_photo {
+  width: 50%;
+  height: 100%;
+  float: left;
+}
+
+#student_info, #instructor_info {
+  width: 50%;
   float: right;
+}
+
+footer {
+  clear: left;
+  margin: 2% 0% 0% 42%;
 }
