--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -41,7 +41,7 @@ header h1 {
   color: #551A8B;
 }
 
-#log_in_button, #student_button, #instructor_button {
+#log_in_button, #student_button, #instructor_button, #vote_button {
   font-size: 150%;
   text-decoration: none;
   width: 100%;
@@ -71,20 +71,36 @@ header h1 {
   margin-left: 18%;
 }
 
+#student_thumbnails, #instructor_thumbnails {
+  margin-left: 4%;
+}
+
 #student_photo, #instructor_photo {
   width: 50%;
-  height: 100%;
+  height: 80%;
+  border: 5px solid #666;
   float: left;
 }
 
-#student_info, #instructor_info {
-  width: 50%;
+#student_quote, #instructor_quote {
+  width: 42%;
+  height: 75%;
+  padding: 2%;
+  box-shadow: 0px 0px 0px 5px #666 inset;
   float: right;
 }
 
+#back {
+  width: 20%;
+  margin: 10% auto;
+  padding: 2%;
+  box-shadow: 0px 0px 0px 5px #666 inset;
+  text-align: center;
+}
+
 footer {
-  clear: left;
-  margin: 2% 0% 0% 42%;
+  margin-top: 2%;
+  margin-left: 76%;
 }
 
 .devise_title {
@@ -105,6 +121,35 @@ footer {
 #devise_email_label, #devise_password_label, #devise_email_field, #devise_password_field {
   line-height: 100%;
 }
+
+ #vote_title, #student_title, #instructor_title {
+  width: 40%;
+  box-shadow: 0px 0px 0px 5px #666 inset;
+  font-size: 180%;
+  padding: 2%;
+  text-align: center;
+  margin: 2% auto 2% auto;
+ }
+
+ #student_title, #instructor_title {
+  margin: 0% auto 2% auto;
+ }
+
+ #instructor_quote, #student_quote {
+  font-size: 150%;
+  line-height: 150%;
+ }
+
+ .superlative_list_item  {
+  width: 75%;
+  float: left;
+  margin-left: 5%;
+ }
+
+ .student_dropdown {
+  width: 20%;
+  float: right;
+ }
 
 .notice, .alert {
   font-size: 150%;
