--- a/app/views/instructors/_instructor.html.erb
+++ b/app/views/instructors/_instructor.html.erb
@@ -1,5 +1,6 @@
-<div id="instructor_photo"><%= image_tag "#{@instructor.id}.jpg", :size => "800x500" %></div>
-<div id="instructor_info"><h1><%= @instructor.name %></h1>
-<q>This is a quote from <%= @instructor.name %>.</q>
-<p>This is a bio for <%= @instructor.name %>. Blah. Blah. Blah.</p></div>
-<p><%= link_to "Back", instructors_path %></p>
+<div id="instructor_title"><%= @instructor.name %></div>
+<div id="instructor_photo"><%= image_tag "instructors/full/#{@instructor.name}.jpg", :width => "100%", :height => "100%" %></div>
+<div id="instructor_quote">
+  <q><%= @instructor.quote %></q>
+  <div id="back"><%= link_to "Back", instructors_path, :style => 'text-decoration: none' %></div>
+</div>
