--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,25 @@
 
   <body>
     <ul id ="menu">
-      <li><button id="log_in_button" class="button"><% unless current_user %>
-        <%= link_to "Log In", new_user_session_path, :style => 'text-decoration: none' %>
-      <% end %></button></li>
-      <li><button id="instructor_button" class="button"><%= link_to "Instructors", instructors_path, :style => 'text-decoration: none' %></button></li>
-      <li><button id="student_button" class="button"><%= link_to "Students", students_path, :style => 'text-decoration: none' %></button></li>
+      <% unless current_user %>
+        <li><button id="log_in_button" class="button">
+          <%= link_to "Log In", new_user_session_path, :style => 'text-decoration: none' %>
+        </button></li>
+      <% end %>
+      <% if current_user %>
+         <li><button id="log_in_button" class="button">
+          <%= link_to "Log Out", destroy_user_session_path, :method => :delete, :style => 'text-decoration: none' %>
+        </button></li>
+      <% end %>
+      <li><button id="instructor_button" class="button">
+        <%= link_to "Instructors", instructors_path, :style => 'text-decoration: none' %>
+      </button></li>
+      <li><button id="student_button" class="button">
+        <%= link_to "Students", students_path, :style => 'text-decoration: none' %>
+      </button></li>
+      <li><button id="vote_button" class="button">
+        <%= link_to "Vote", new_ballot_path, :style => 'text-decoration: none' %>
+      </button></li>
     </ul>
 
     <div id="wrapper">
