--- a/app/views/students/_student.html.erb
+++ b/app/views/students/_student.html.erb
@@ -1,5 +1,6 @@
-<div id="student_photo"><%= image_tag "#{@student.id}.jpg", :size => "800x500" %></div>
-<div id="student_info"><h1><%= @student.name %></h1>
-<q>This is a quote from <%= @student.name %>.</q>
-<p>This is a bio for <%= @student.name %>. Blah. Blah. Blah.</p></div>
-<p><%= link_to "Back", students_path %></p>
+<div id="student_title"><%= @student.name %></div>
+<div id="student_photo"><%= image_tag "students/full/#{@student.name}.jpg", :width => "100%", :height => "100%" %></div>
+<div id="student_quote">
+  <q> <%= @student.quote %> </q>
+  <div id="back"><%= link_to "Back", students_path, :style => 'text-decoration: none' %></div>
+</div>
