--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
   <div class="devise_label"><%= f.label :password_confirmation %></div>
   <div class="devise_field"><%= f.password_field :password_confirmation, :class => "input" %></div>
   <br>
-  <div class="devise_submit_button"><%= f.submit "Sign up", :class => "button" %></div>
+  <div><%= f.submit "Sign up", :class => "button", :id => "devise_submit_button" %></div>
   <% end %>
   <br>
   <%= render "devise/shared/links" %>
