--- a/app/views/instructors/_form.html.erb
+++ b/app/views/instructors/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag instructors_path, :method => :get do %>
 <p>
   <%= text_field_tag :search, params[:search], :class => "input" %>
-  <%= submit_tag "Find Instructor", :name => nil, :class => "button" %>
+  <%= submit_tag "Find Instructor", :name => nil, :class => "button", :id => "find_instructor_button" %>
 </p>
 <% end %>
