--- a/app/views/ballots/new.html.erb
+++ b/app/views/ballots/new.html.erb
@@ -7,7 +7,7 @@
 <% vote_number_array = [:vote_one, :vote_two, :vote_three, :vote_four, :vote_five, :vote_six, :vote_seven, :vote_eight, :vote_nine, :vote_ten] %>
 
 <ul id="superlative_list">
-  <%= form_for [current_user, @ballot] do |f| %>
+  <%= form_for @ballot do |f| %>
     <% counter = 0 %>
     <% superlative_array.length.times do %>
       <li class="superlative_list_item">
