--- a/app/views/instructors/_instructor.html.erb
+++ b/app/views/instructors/_instructor.html.erb
@@ -1,7 +1,8 @@
 <div id="instructor_title"><%= @instructor.name %></div>
 <div id="instructor_photo"><%= image_tag "instructors/full/#{@instructor.name}.jpg", :width => "100%", :height => "100%" %></div>
 <div id="instructor_quote">
-  <q><%= @instructor.quote %></q>
+  <q>"<%= @instructor.quote %>"</q>
+  <p id="instructor_quote_author"><%= @instructor.quote_author %></p>
 </div>
 <%= link_to "Next", url_for(Instructor.where("id > ?", @instructor.id).first), :style => 'text-decoration: none', :class => "button", :id => "next_button" %>
 <%= link_to "Back", instructors_path, :style => 'text-decoration: none', :class => "button", :id => "back_button" %>
