--- a/app/views/students/_student.html.erb
+++ b/app/views/students/_student.html.erb
@@ -1,7 +1,8 @@
 <div id="student_title"><%= @student.name %></div>
 <div id="student_photo"><%= image_tag "students/full/#{@student.name}.jpg", :width => "100%", :height => "100%" %></div>
 <div id="student_quote">
-  <q> <%= @student.quote %> </q>
+  <q>"<%= @student.quote %>" </q>
+  <p id="student_quote_author"><%= @student.quote_author %><p>
 </div>
 <%= link_to "Next", url_for(Student.where("id > ?", @student.id).first), :style => 'text-decoration: none', :class => "button", :id => "next_button" %>
 <%= link_to "Back", students_path, :style => 'text-decoration: none', :class => "button", :id => "back_button" %>
