--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,9 @@
 <div id="welcome"><p>In 2013, Nashville Software School graduated twenty-six individuals from diverse backgrounds with the help of five instructors and several mentors. The grueling six month course taught students about code, and more importantly, how to learn technology. This Yearbook is a commemoration of their experiences.</p></div>
+<hr>
+<br>
+<ul id="thanks">Thank you to the following people for their help with this Yearbook:
+  <li><a id="jack_link" href="http://www.linkedin.com/in/jwhitis" target="_blank">Jack Whitis</a></li>
+  <li><a id="jeff_link" href="http://jefffelchner.com/" target="_blank">Jeff Felchner</a></li>
+  <li><a id="mandy_link" href="http://www.amandamccadams.com/" target="_blank">Amanda McCadams<a></li>
+</ul>
+
